------------------------------------------------------
Version 1.10.2 - 2.2.18
------------------------------------------------------
Additions
- Changed how the restocking upgrade works internally, allowing for mods like BetterBuildersWands and NotEnoughWands to be compatible.
- Added rendering of the backpacks in multiplayer (you can now see other player's equipped backpacks).

Changes
- None

Bug Fixes
- Fixed forge > 2120 not being explicitly required.
------------------------------------------------------
Version 1.10.2 - 2.2.17
------------------------------------------------------
Additions
- None

Changes
- None

Bug Fixes
- Re-add mod load order to be after JEI to fix random client crash.
------------------------------------------------------
Version 1.10.2 - 2.2.16
------------------------------------------------------
Additions
- None

Changes
- Full release (about time :D)

Bug Fixes
- Fix dupe bug when double clicking an item stack with the configurable inventory open.
- Fix crash when JEI is not used.
------------------------------------------------------
Version 1.10.2 - 2.2.15
------------------------------------------------------
Additions
- Added crafting table tabs to the side of all of this mod's custom JEI recipe categories.
    - Should clearly indicate all recipes are done in a normal crafting grid.

Changes
- Improved mining filter's item checking for what it should pick up.
- Default time for a tooltip to appear when hovering over it is now shorter (1.0s as opposed to 1.5s).

Bug Fixes
- Fixed item pickup sound playing on every item pickup at the wrong tone and pitch.
------------------------------------------------------
Version 1.10.2 - 2.2.14
------------------------------------------------------
Additions
- Added pickup sound to play even when a backpack picks up an item directly
- Added tooltip to JEI page for increasing tiers recipe (detailing how everything in the previous backpack is carried over automatically).

Changes