@@ -1,11 +1,15 @@
 package gr8pefish.ironbackpacks.events;
 
 import gr8pefish.ironbackpacks.api.Constants;
+import gr8pefish.ironbackpacks.api.items.backpacks.interfaces.IBackpack;
 import gr8pefish.ironbackpacks.capabilities.IronBackpacksCapabilities;
 import gr8pefish.ironbackpacks.capabilities.player.PlayerDeathBackpackCapabilities;
 import gr8pefish.ironbackpacks.capabilities.player.PlayerWearingBackpackCapabilities;
 import gr8pefish.ironbackpacks.config.ConfigHandler;
+import gr8pefish.ironbackpacks.container.backpack.ContainerBackpack;
+import gr8pefish.ironbackpacks.container.backpack.InventoryBackpack;
 import gr8pefish.ironbackpacks.items.backpacks.ItemBackpack;
+import gr8pefish.ironbackpacks.items.upgrades.UpgradeMethods;
 import gr8pefish.ironbackpacks.network.NetworkingHandler;
 import gr8pefish.ironbackpacks.network.client.ClientEquippedPackMessage;
 import gr8pefish.ironbackpacks.util.helpers.IronBackpacksHelper;
@@ -14,8 +18,11 @@ import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.entity.player.EntityPlayerMP;
 import net.minecraft.inventory.Slot;
 import net.minecraft.item.ItemStack;
+import net.minecraft.util.EnumFacing;
 import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.RayTraceResult;
+import net.minecraft.world.World;
 import net.minecraftforge.event.AnvilUpdateEvent;
 import net.minecraftforge.event.AttachCapabilitiesEvent;
 import net.minecraftforge.event.entity.EntityJoinWorldEvent;
@@ -241,6 +248,54 @@ public class ForgeEventHandler {
             if (pair != null) {
                 event.getEntityPlayer().inventory.setInventorySlotContents(pair.getRight().getSlotIndex(), pair.getLeft());
 //                event.getItemStack().stackSize = resuppliedStack.stackSize; //set the new stack size (as you can't/don't need to directly replace the stack)
+            }
+        }
+    }
+
+    @SubscribeEvent
+    public void onBlockClicked(PlayerInteractEvent.RightClickBlock event){ //ToDo: keep code DRY (see ItemBackpack's deposit code)
+        if (!event.isCanceled() && !event.getWorld().isRemote) { //server side, not canceled
+
+            EntityPlayer player = event.getEntityPlayer();
+            ItemStack itemstack = IronBackpacksCapabilities.getWornBackpack(event.getEntityPlayer()); //check equipped pack
+            boolean openAltGui = true;
+
+            if (player.isSneaking() && itemstack != null) { //only do it when player is sneaking and has a backpack equipped
+
+                World world = event.getWorld();
+                BlockPos pos = event.getPos();
+                EnumFacing side = event.getFace();
+
+                ArrayList<ItemStack> upgrades = IronBackpacksHelper.getUpgradesAppliedFromNBT(itemstack);
+                boolean hasDepthUpgrade = UpgradeMethods.hasDepthUpgrade(upgrades);
+                if (UpgradeMethods.hasQuickDepositUpgrade(upgrades)) {
+                    openAltGui = !UpgradeMethods.transferFromBackpackToInventory(player, itemstack, world, pos, side, false);
+                    if (!hasDepthUpgrade)
+                        if (!openAltGui) event.setCanceled(true);
+                } else if (UpgradeMethods.hasQuickDepositPreciseUpgrade(upgrades)) {
+                    openAltGui = !UpgradeMethods.transferFromBackpackToInventory(player, itemstack, world, pos, side, true);
+                    if (!hasDepthUpgrade)
+                        if (!openAltGui) event.setCanceled(true);
+                }
+                boolean openAltGuiDepth;
+                if (hasDepthUpgrade) {
+                    ContainerBackpack container = new ContainerBackpack(new InventoryBackpack(player, itemstack));
+                    for (int j = 0; j < container.getInventoryBackpack().getSizeInventory(); j++) {
+                        ItemStack nestedBackpack = container.getInventoryBackpack().getStackInSlot(j);
+                        if (nestedBackpack != null && nestedBackpack.getItem() != null && nestedBackpack.getItem() instanceof IBackpack) {
+                            ArrayList<ItemStack> nestedUpgrades = IronBackpacksHelper.getUpgradesAppliedFromNBT(nestedBackpack);
+                            if (UpgradeMethods.hasQuickDepositUpgrade(nestedUpgrades)) {
+                                openAltGuiDepth = !UpgradeMethods.transferFromBackpackToInventory(player, nestedBackpack, world, pos, side, false);
+                                if (!openAltGuiDepth) openAltGui = false;
+                            } else if (UpgradeMethods.hasQuickDepositPreciseUpgrade(nestedUpgrades)) {
+                                openAltGuiDepth = !UpgradeMethods.transferFromBackpackToInventory(player, nestedBackpack, world, pos, side, true);
+                                if (!openAltGuiDepth) openAltGui = false;
+                            }
+                        }
+                    }
+                    if (!openAltGui) event.setCanceled(true);
+                }
+
             }
         }
     }
